src/objects/Vertex_Validation_Postal_Code__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Vertex Validation Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Siebel_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Puerto_Rico</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>PR</value>
        </filters>
        <label>Puerto Rico</label>
    </listViews>
    <nameField>
        <label>Vertex Validation Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vertex Validation Postal Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>